force-app/main/default/objects/SA_Detail_tr1__c/SA_Detail_tr1__c.object-meta.xml
<CustomObject>
    <label>SA Details_tr1</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>SA Details_tr1</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA Details_tr1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>