force-app/main/default/objects/SA_Detail_tr1__c/fields/Customer_handled_tr1__c.field-meta.xml
<CustomField>
    <fullName>Customer_handled_tr1__c</fullName>
    <label>Customer handled_tr1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>