force-app/main/default/objects/SA_Detail_tr1__c/fields/Date_of_Joining_tr1__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining_tr1__c</fullName>
    <label>Date of Joining_tr1</label>
    <type>Date</type>
</CustomField>