force-app/main/default/objects/SA_Detail_tr1__c/fields/Experience_tr1__c.field-meta.xml
<CustomField>
    <fullName>Experience_tr1__c</fullName>
    <label>Experience_tr1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>