force-app/main/default/objects/SA_Detail_tr1__c/fields/Location_tr1__c.field-meta.xml
<CustomField>
    <fullName>Location_tr1__c</fullName>
    <label>Location_tr1</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>