force-app/main/default/objects/SA_Detail_tr1__c/fields/Name_tr1__c.field-meta.xml
<CustomField>
    <fullName>Name_tr1__c</fullName>
    <label>Name_tr1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>