force-app/main/default/objects/SA_Detail_tr1__c/fields/Specilization_tr1__c.field-meta.xml
<CustomField>
    <fullName>Specilization_tr1__c</fullName>
    <label>Specilization_tr1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>