force-app/main/default/objects/SA_Detail_tr1__c/fields/Supervisor_tr1__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_tr1__c</fullName>
    <label>Supervisor_tr1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SA Details_tr1</relationshipLabel>
    <relationshipName>SA_Details_tr1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>