force-app/main/default/objects/SA_Detail_tr1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_tr1__c</columns>
    <columns>Location_tr1__Latitude__s</columns>
    <columns>Location_tr1__Longitude__s</columns>
    <columns>Specilization_tr1__c</columns>
    <columns>Supervisor_tr1__c</columns>
    <columns>Experience_tr1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>